# ezytutor

./: README.md  curl.md
tutor-db/: .env  Cargo.toml
tutor-db/src/: database.sql
tutor-db/src/iter2/: handlers.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  routes.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  models.rs
tutor-db/src/iter5/: routes.rs
tutor-db/src/iter5/handlers/: course.rs  general.rs
tutor-db/src/iter5/models/: course.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs
tutor-web-app-ssr/static/: static-web-page.html  styles.css  tutor-styles.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter3/: list.html
tutor-web-app-ssr/static/iter4/: list.html
tutor-web-app-ssr/static/iter5/: register.html
tutor-web-service/src/iter5/: errors.rs  routes.rs  state.rs
tutor-web-service/src/iter5/dbaccess/: course.rs  tutor.rs
tutor-web-service/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-web-service/src/iter5/handlers/: tutor.rs
tutor-web-service/src/iter5/models/: tutor.rs
